--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,14 +6,14 @@ android {
 
     defaultConfig {
         applicationId "com.example.jinfang.easiercollege"
-        minSdkVersion 10
+        minSdkVersion 15
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
